Update pricing information in 00_core.ipynb
Add link to the pricing page in the notebook.

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -1364,7 +1364,7 @@
    "id": "b3f168bb",
    "metadata": {},
    "source": [
-    "We've shown the token usage but we really care about is pricing. Let's extract the latest pricing from Google into a pricing dict."
+    "We've shown the token usage but we really care about is pricing. Let's extract the latest [pricing](https://ai.google.dev/pricing#1_5pro) from Google into a pricing dict."
    ]
   },
   {
